--- a/style.css
+++ b/style.css
@@ -49,16 +49,17 @@ li a:hover {
 	border: solid;
 	padding: 25px;
 }
-.footer {
-	position: fixed;
-	bottom: 15px;
-	right: 15px;  
+footer {
+	position: absolute;
+	bottom: 0;
+	padding: 10px;
 }
 .navsome {
-	position: fixed;
-	bottom: 15px;
-	left: 15px; 
+	position: absolute;
+	bottom: 0;
+	right: 0;
 	opacity: 0.7;
+	padding: 10px;
 }
 .some {
 	padding: 5px;
