--- a/style.css
+++ b/style.css
@@ -142,27 +142,33 @@ footer, nav, li {
 }
 
 .test {
-	background-color: rgb(183, 60, 33, 0.5);
-	padding: 3px;
+	background-color: rgb(158, 22, 20);
+	padding: 5px;
 	position: fixed;
 	width: 100%;
+	z-index: 1;
 }
 .phone {
-	padding-left: 5px;
-	padding-right: 5px;
+	padding-left: 10px;
+	padding-right: 10px;
 	text-align: center;
-	color: rgb(150,0,0);
+	color: grey;
 	transition: background-color 1s ease;
 	border-radius: 30px;
 }
 .phone:hover {
-	color: rgb(150,0,0);
+	color: grey;
 	background-color: rgb(66, 9, 7, 0.6);
 	border-radius: 30px;
 }
 
 @media screen and (min-width: 991px) {
-.test {   
+.test{   
+	visibility: hidden;
+  }
+}
+@media screen and (max-width: 991px) {
+.logo {   
 	visibility: hidden;
   }
 }
