--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ a:hover {
 	border-bottom: 5px solid red;
 }
 @media screen and (max-width: 991px) {
-footer, nav, li {   
+footer, nav, .navigation {   
 	visibility: hidden;
   }
 }
