--- a/style.css
+++ b/style.css
@@ -64,11 +64,11 @@ footer {
 	opacity: 0.7;
 	padding: 10px;
 }
-.some {
+.some, .somee {
 	padding: 5px;
 	opacity: 0.7;
 }
-.some:hover img{
+.some, .somee:hover img{
     transform: scale(1.3);
 	opacity: 1;
 }
@@ -170,5 +170,24 @@ footer, nav, .navigation {
 @media screen and (max-width: 991px) {
 .logo {   
 	padding-top: 30px;
+  }
+}
+@media screen and (min-width: 991px) {
+.footerphone, .navsomee, .somee {   
+	visibility: hidden;
+  }
+}
+@media screen and (max-width: 991px) {
+.footerphone, .navsomee {   
+	position: fixed;
+	bottom: 0;
+	background-color: rgb(158, 22, 20);
+	width: 100%;
+	max-height: 36px;
+  }
+}
+@media screen and (max-width: 991px) {
+.navsomee {   
+	margin-left: 27%;
   }
 }
