--- a/style.css
+++ b/style.css
@@ -184,10 +184,12 @@ footer, nav, .navigation {
 	background-color: rgb(158, 22, 20);
 	width: 100%;
 	max-height: 36px;
+	color: grey;
   }
 }
 @media screen and (max-width: 991px) {
 .navsomee {   
-	margin-left: 27%;
+	margin-left: 36%;
+	opacity: 0.8;
   }
 }
