--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ main {
 	padding-top: 20%;
 	padding-left: 0%;
 	font-size: 140%;
+	margin-left: -20%;
 }
 li a {
 	display: block;
@@ -33,6 +34,7 @@ li a {
 	color: red;
 	transition: background-color 1.5s ease;
 	border-radius: 30px;
+	max-width: 50%;
 }
 li a:link {
 	text-decoration: none;
@@ -62,27 +64,36 @@ li a:hover {
 	padding: 25px;
 }
 footer {
-	position: absolute;
+	position: fixed;
 	bottom: 0;
 	padding: 10px;
 }
 .navsome {
-	position: absolute;
+	position: fixed;
 	bottom: 0;
 	right: 0;
 	opacity: 0.7;
 	padding: 10px;
 }
-.some, .somee {
+.somee {
 	padding: 5px;
 	opacity: 0.7;
 }
-.some, .somee:hover img{
+.some {
+	padding: 5px;
+	opacity: 0.7;
+}
+.somee:hover img{
+    transform: scale(1.3);
+	opacity: 1;
+}
+.some:hover img{
     transform: scale(1.3);
 	opacity: 1;
 }
 a:hover {
 	transform: scale(1.1, 1.1);
+	opacity: 1;
 }
 .lds-dual-ring {
   display: inline-block;
@@ -156,6 +167,7 @@ footer, nav, .navigation {
 	position: fixed;
 	width: 100%;
 	z-index: 1;
+	transition: top 0.5s;
 }
 .phone {
 	padding-left: 6px;
@@ -200,11 +212,105 @@ footer, nav, .navigation {
 @media screen and (max-width: 780px) {
 .navsomee {   
 	margin-left: 43%;
-	opacity: 0.8;
+	opacity: 0.9;
   }
 }
+button {
+	position: absolute;
+	margin-top: 5%;
+	background-color: rgb(181, 29, 21, 0.5);
+	border: 2px solid black;
+	color: grey;
+	padding: 5px 22px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	border-radius: 12px;
+	z-index: 2;
+	opacity: 0.5;
+}
+
+button:hover {
+	color: rgb(150,0,0);
+	background-color: rgb(66, 9, 7, 0.6);
+	border-radius: 30px;
+}
+#myDIV {
+	position: absolute;
+	margin-left: 35%;
+	display: none;
+	margin-top: -22%;
+	box-shadow: 7px 7px 4px grey;
+}
+#myDIVV {
+	position: absolute;
+	margin-left: 30%;
+	display: none;
+	margin-top: -29%;
+	box-shadow: 7px 7px 4px grey;
+}
 @media screen and (max-width: 780px) {
-body {   
-	background-image: url("bgphone.jpg");
+#myDIV, video, button {   
+	visibility: hidden;
   }
+}
+
+*,
+*::before,
+*::after { 
+box-sizing: border-box;
+background-size: contain;
+}
+.card {
+  position: relative;
+  width: 800px;
+  height: 600px;
+  overflow: hidden;
+  border-radius: 5px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+  background-color: rgba(140, 22, 115, 0.0);
+}
+
+.card_part {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 7;
+  width: 800px;
+  height: 600px;
+   transform: translateX( 1300px );
+  background-image: url( images/img6.jpg );
+  animation: opaqTransition 24s cubic-bezier(0.8, 0.8, 0.8, 0.8) infinite;
+}
+.card_part.card_part-two {
+  z-index: 6;
+  background-image: url(images/img2.jpg);
+  animation-delay: 4s;
+}
+.card_part.card_part-three {
+  z-index: 5;
+  background-image: url(images/img3.jpg);
+  animation-delay: 8s;
+}
+.card_part.card_part-four {
+  z-index: 4;
+  background-image: url( images/img4.jpg);
+  animation-delay: 12s;
+}
+.card_part.card_part-five {
+  z-index: 3;
+  background-image: url( images/img5.jpg);
+  animation-delay: 16s;
+}
+.card_part.card_part-six {
+  z-index: 2;
+  background-image: url( images/img1.jpg);
+  animation-delay: 20s;
+}
+@keyframes opaqTransition {
+  3% { transform: translateX( 0 ); }
+  25% { transform: translateX( 0 ); }
+  28% { transform: translateX( -1300px ); }
+  100% { transform: translateX( -1300px ); }
 }
