--- a/style.css
+++ b/style.css
@@ -280,32 +280,32 @@ background-size: contain;
   width: 800px;
   height: 600px;
    transform: translateX( 1300px );
-  background-image: url( images/img6.jpg );
+  background-image: url(img6.jpg );
   animation: opaqTransition 24s cubic-bezier(0.8, 0.8, 0.8, 0.8) infinite;
 }
 .card_part.card_part-two {
   z-index: 6;
-  background-image: url(images/img2.jpg);
+  background-image: url(img2.jpg);
   animation-delay: 4s;
 }
 .card_part.card_part-three {
   z-index: 5;
-  background-image: url(images/img3.jpg);
+  background-image: url(img3.jpg);
   animation-delay: 8s;
 }
 .card_part.card_part-four {
   z-index: 4;
-  background-image: url( images/img4.jpg);
+  background-image: url(img4.jpg);
   animation-delay: 12s;
 }
 .card_part.card_part-five {
   z-index: 3;
-  background-image: url( images/img5.jpg);
+  background-image: url(img5.jpg);
   animation-delay: 16s;
 }
 .card_part.card_part-six {
   z-index: 2;
-  background-image: url( images/img1.jpg);
+  background-image: url(img1.jpg);
   animation-delay: 20s;
 }
 @keyframes opaqTransition {
