--- a/style.css
+++ b/style.css
@@ -18,6 +18,36 @@ body {
 	float: left;
 	opacity: 0.7;
 }
+.logotext {
+	font-size: 20px;
+	color: rgb(163, 137, 139);
+	font-style: italic;
+	text-shadow: 2px 2px black;
+}
+.hiddentxt{
+	color: grey;
+	
+}
+.hiddenimg {
+	visibility: hidden;
+	opacity: 0;
+	transition: visibility 0s, opacity 0.5s linear;
+	display: none;
+}
+.hiddentxt:hover ~ .hiddenimg {
+	visibility: visible;
+	display: block;
+	position: absolute;
+	margin-top: -55%;
+	margin-left: 30%;
+	z-index: 1000;
+	opacity: 1;
+	color: black;
+}
+.hiddentxt:hover {
+	color: black;
+}
+
 main {
 	clear: both;
 }
@@ -81,7 +111,7 @@ footer {
 }
 .some {
 	padding: 5px;
-	opacity: 0.7;
+	opacity: 0.5;
 }
 .somee:hover img{
     transform: scale(1.3);
