--- a/style.css
+++ b/style.css
@@ -167,30 +167,6 @@ a:hover {
     transform: rotate(360deg);
   }
 }
-.lds-dual-ring {
-	display: inline-block;
-	width: 64px;
-	height: 64px;
-}
-.lds-dual-ring:after {
-	content: " ";
-	display: block;
-	width: 46px;
-	height: 46px;
-	margin: 1px;
-	border-radius: 50%;
-	border: 5px solid #fff;
-	border-color: #fff transparent #fff transparent;
-	animation: lds-dual-ring 1.2s linear infinite;
-}
-@keyframes lds-dual-ring {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
 .first {
 	border-bottom: 5px solid red;
 }
@@ -266,7 +242,7 @@ footer, nav, .navigation {
 }
 @media screen and (max-width: 780px) {
 #myDIVV, .card, .card_part{  
-	margin-top: 50%;
+	top: 710%;
 	width: 100%;
 	max-width: 400px;
 	z-index: -5;
