--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ p, li {
 .hiddenimg {
 	visibility: hidden;
 	display: none;
-	bottom: 180px;
+	bottom: 60px;
 	left: -25%;
   }
 }
@@ -113,9 +113,12 @@ li a:hover {
 	margin-left: 30%;
 	margin-top: 5%;
 }
+@media screen and (min-width: 780px) {
 .resumeitem {
 	margin-bottom: 250px;
+  }
 }
+
 .early {
 	margin-bottom: 50px;
 }
@@ -267,6 +270,7 @@ footer, nav, .navigation {
 	z-index: -5;
 	background-repeat:no-repeat;
 	left: -30%;
+	margin-top: 40%;
   }
 }
 @media screen and (min-width: 780px) {
@@ -288,6 +292,7 @@ video {
 	padding-top: 20%;
   }
 }
+
 .later {
 	margin-bottom: 180px;
 }
